<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id = "@+id/network_status_label_textview_id"
        android:text="@string/network_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id = "@+id/network_status_value_textview_id"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/network_status_label_textview_id"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id = "@+id/wifi_header_textview_id"
        android:text="@string/wifi_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/network_status_label_textview_id"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id = "@+id/wifi_state_label_textview_id"
        android:text="Service State:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_header_textview_id"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id = "@+id/wifi_state_value_textview_id"
        android:text="@string/wifi_state_unknown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_header_textview_id"
        android:layout_toRightOf="@id/wifi_state_label_textview_id"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id = "@+id/wifi_ssid_label_textview_id"
        android:text="SSID:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_state_label_textview_id"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id = "@+id/wifi_ssid_value_textview_id"
        android:text="Unknown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_state_label_textview_id"
        android:layout_toRightOf="@id/wifi_ssid_label_textview_id"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id = "@+id/wifi_rssi_label_textview_id"
        android:text="RSSI:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_ssid_label_textview_id"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id = "@+id/wifi_rssi_value_textview_id"
        android:text="Unknown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_ssid_value_textview_id"
        android:layout_toRightOf="@id/wifi_rssi_label_textview_id"
        android:layout_marginLeft="10dp"
        />




    <TextView
        android:id = "@+id/cellular_header_textview_id"
        android:text="@string/cellular_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_rssi_label_textview_id"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id = "@+id/cellular_state_label_textview_id"
        android:text="Service State:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cellular_header_textview_id"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id = "@+id/cellular_state_value_textview_id"
        android:text="@string/cellular_state_unknown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cellular_header_textview_id"
        android:layout_toRightOf="@id/cellular_state_label_textview_id"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id = "@+id/cellular_phone_type_label_textview_id"
        android:text="Phone Type:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cellular_state_label_textview_id"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id = "@+id/cellular_phone_type_value_textview_id"
        android:text="@string/cellular_type_unknown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cellular_state_label_textview_id"
        android:layout_toRightOf="@id/cellular_phone_type_label_textview_id"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id = "@+id/cellular_network_type_label_textview_id"
        android:text="Network Type:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cellular_phone_type_label_textview_id"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id = "@+id/cellular_network_type_value_textview_id"
        android:text="@string/cellular_type_unknown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cellular_phone_type_label_textview_id"
        android:layout_toRightOf="@id/cellular_network_type_label_textview_id"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id = "@+id/cellular_operator_label_textview_id"
        android:text="Operator:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cellular_network_type_label_textview_id"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id = "@+id/cellular_operator_value_textview_id"
        android:text="Unknown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cellular_network_type_label_textview_id"
        android:layout_toRightOf="@id/cellular_operator_label_textview_id"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id = "@+id/cellular_roaming_label_textview_id"
        android:text="Roaming:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cellular_operator_label_textview_id"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id = "@+id/cellular_roaming_value_textview_id"
        android:text="Unknown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cellular_operator_label_textview_id"
        android:layout_toRightOf="@id/cellular_roaming_label_textview_id"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id = "@+id/cellular_rssi_label_textview_id"
        android:text="RSSI (dbm):"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cellular_roaming_label_textview_id"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id = "@+id/cellular_rssi_value_textview_id"
        android:text="Unknown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cellular_roaming_label_textview_id"
        android:layout_toRightOf="@id/cellular_rssi_label_textview_id"
        android:layout_marginLeft="10dp"
        />
</RelativeLayout>
